🎉 init: Port to Minecraft 26.1